src/app/template/components/sidenav/sidenav.component.scss
$sidenav-width: 240px;
$event-panel-width: 300px;

.sidenav-container {
  flex: 1;
  width: 100%;
  min-width: 100%;
  height: 100%;
  min-height: 100%;
}

.sidenav-content {
  display: flex;
  height: 100%;
  flex-direction: column;
}

.sidenav {
  width: $sidenav-width;
}

.event-panel {
  width: $event-panel-width;
}

.footer {
  margin-top: auto;
}

.wrapper {
  margin: 25px;
}

.content {
  overflow: auto;
}

.smallScreenPlayer {
  width: 100%;
  right: 0;
  left: 0;
}

.is-active-link,
.is-active-link:focus {
  background: rgba(129, 129, 129, 0.15);
  color: white;
}

.is-active-link:hover {
  background: rgba(129, 129, 129, 0.15);
}

.menu-title {
  font-family: "Roboto Mono", monospace;
}

